<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.pyranid</groupId>
	<artifactId>pyranid</artifactId>
	<version>4.0.1</version>
	<packaging>jar</packaging>
	<name>Pyranid</name>
	<description>Pyranid is a zero-dependency JDBC interface for modern Java applications.</description>
	<url>https://www.pyranid.com</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Mark Allen</name>
			<email>mark@revetware.com</email>
			<organization>Revetware LLC</organization>
			<organizationUrl>https://www.revetware.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:pyranid/pyranid.git</connection>
		<developerConnection>scm:git:git@github.com:pyranid/pyranid.git</developerConnection>
		<url>git@github.com:pyranid/pyranid.git</url>
	</scm>

	<distributionManagement>
		<repository>
			<name>Central Portal Snapshots</name>
			<id>central-portal-snapshots</id>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<fork>true</fork>
					<release>17</release>
					<compilerArgument>-parameters</compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<quiet>true</quiet>
					<links>
						<link>https://docs.oracle.com/en/java/javase/25/docs/api/</link>
						<link>https://javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.2/</link>
						<link>https://javadoc.io/doc/org.jspecify/jspecify/1.0.0/</link>
					</links>
					<notimestamp>true</notimestamp>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
					<additionalOptions>
						<additionalOption>-XDignore.symbol.file</additionalOption>
						<additionalOption>-Xdoclint:-html</additionalOption>
					</additionalOptions>
					<linksource>true</linksource>
					<show>public</show>
					<bottom><![CDATA[Copyright 2015-2022 <a href="https://www.xmog.com" target="_blank">Transmogrify LLC<a>, 2022-2026 <a href="https://www.revetware.com" target="_blank">Revetware LLC<a>.]]></bottom>
					<source>17</source>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.8</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.8.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central-portal</publishingServerId>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.7</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jspecify</groupId>
			<artifactId>jspecify</artifactId>
			<version>1.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.13.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.7.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
